Fixed habilities section, fixed modal menu not showing when mobile nav is visible, added links to contact, transparent modal and nav, added shadows, added alt and title to technologies icons, added more metadata tags

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -24,6 +24,7 @@ h1 {
     font-weight: 700;
     margin-bottom: 1.4rem;
     white-space: nowrap;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.25);
     span {
         font-size: 2.2rem;
         color: c.$grey;
