--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -73,6 +73,7 @@ header {
     justify-content: center;
     align-items: center;
     background-color: c.$blueDark;
+    box-shadow: 0 4px 7px rgba(0,0,0,.3);
     .container {
         padding: 0;
         display: flex;
@@ -109,10 +110,14 @@ header {
         top: 0;
         width: 100%;
         margin: 0;
+        // background-color: transparentize(c.$blueDark, .25);
+        background: linear-gradient(c.$blueDark 0%, transparentize(c.$blueDark, .85) 125%);
+        backdrop-filter: blur(5px);
     }
 }
 .menu-mobile-modal {
-    background-color: c.$blueDark;
+    background-color: transparentize(c.$blueDark, .05);
+    backdrop-filter: blur(6px);
     position: fixed;
     top: 0;
     bottom: 0;
@@ -125,13 +130,14 @@ header {
     justify-content: center;
     nav {
         color: c.$white;
+        flex-direction: column;
         a {
-            margin-bottom: 8vh;
+            margin: 0 0 8vh 0;
         }
     }
     svg {
         margin-bottom: 10vh;
         display: block;
     }
-    @include m.tablet {display: none;}
+    @include m.custom(850px) {display: none;}
 }
